<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".auth.ForgotPassword">

    <EditText
        android:id="@+id/forgotEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotEmailEditText"
        android:layout_marginTop="8dp"
        android:textColor="#FF0000"
        android:visibility="gone"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        android:layout_below="@+id/resetPasswordButton"
        android:layout_marginTop="16dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/errorMessageTextView"
        android:layout_marginTop="16dp"
        android:text="Reset Password"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
