<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".auth.LoginActivity">

    <ImageView
        android:id="@+id/appLogoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogoImageView"
        android:layout_marginTop="32dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="16dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/signInOrRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="32dp"
        android:text="Sign In with Email/Password"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signInOrRegisterButton"
        android:layout_centerHorizontal="true"
        android:text="Forgot Password"
        android:layout_marginTop="16dp"/>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="Switch to Registration"
        android:textOn="Switch to Sign-In"
        android:checked="false"
        android:layout_below="@+id/forgotPasswordButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"/>





</RelativeLayout>